added -XX:MaxPermSize=100M to artisynth.bat and fixed race condition in Main.loadModelFile
git-svn-id: https://svn.artisynth.org/svn/artisynth_core/trunk@739 7661e47b-f193-4b25-995f-cdbae50cbfef